--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/article_items.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/layout/article_items.xml
@@ -121,55 +121,62 @@
             android:textColor="?attr/splashTextColor"
             tools:ignore="UnusedAttribute" />
 
-        <Button
-            android:id="@+id/blog_post_btn"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
+        <LinearLayout
             android:layout_below="@id/blog_column_tv"
-            android:layout_marginStart="9dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
             android:layout_marginTop="20dp"
-            android:background="@drawable/btn_background_stroke_blue"
-            android:elevation="10dp"
-            android:fontFamily="@font/montserrat_light"
-            android:text="@string/blog_post_btn_readmore"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:backgroundTint="@color/blue" />
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp">
 
-        <Button
-            android:id="@+id/blog_edit_btn"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_below="@id/blog_column_tv"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="20dp"
-            android:layout_toEndOf="@id/blog_post_btn"
-            android:background="@drawable/btn_background_stroke_blue"
-            android:elevation="10dp"
-            android:fontFamily="@font/montserrat_light"
-            android:text="@string/edit_btn"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:backgroundTint="@color/black" />
+            <Button
+                android:id="@+id/blog_read_btn"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@drawable/btn_background_stroke_blue"
+                android:elevation="10dp"
+                android:fontFamily="@font/montserrat_light"
+                android:text="@string/read_article_btn"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:backgroundTint="@color/blue" />
 
-        <Button
-            android:id="@+id/blog_del_btn"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_below="@id/blog_column_tv"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="20dp"
-            android:layout_toEndOf="@id/blog_edit_btn"
-            android:background="@drawable/btn_background_stroke_blue"
-            android:elevation="10dp"
-            android:fontFamily="@font/montserrat_light"
-            android:text="@string/blog_post_btn_readmore"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:backgroundTint="@color/red" />
+
+            <Button
+                android:id="@+id/blog_edit_btn"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/btn_background_stroke_blue"
+                android:elevation="10dp"
+                android:fontFamily="@font/montserrat_light"
+                android:text="@string/edit_btn"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:backgroundTint="@color/black" />
+
+            <Button
+                android:id="@+id/blog_del_btn"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/btn_background_stroke_blue"
+                android:elevation="10dp"
+                android:fontFamily="@font/montserrat_light"
+                android:text="@string/delete_btn"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:backgroundTint="@color/red" />
+
+
+    </LinearLayout>
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
